<resources>
    <string name="app_name">Facebook</string>
    <string name="facebook_tv">Facebook</string>
    <string name="mobile_number_or_email">Mobile number or email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_passwprd">Forgot password?</string>
    <string name="or">or</string>
    <string name="create_new_account">Create new Facebook account</string>
    <string name="english_tv">English (US)</string>
    <string name="more_languages_tv">More languages…</string>
    <string name="join_facebook">Join Facebook</string>
    <string name="join_fb_description">We\'ll help you create a new account in a few easy steps.</string>
    <string name="next">Next</string>
    <string name="already_have_an_account_txt">Already have an account?</string>
    <string name="name_heading">What\'s your name?</string>
    <string name="name_description">Enter the name you use in real life</string>
    <string name="user_name_tv">User Name</string>
    <string name="name">Name</string>
    <string name="birthday_title">Birthday</string>
    <string name="what_s_your_birthday">What\'s your birthday?</string>
    <string name="bday_description">Choose your date of birth.You can always make this private later</string>
    <string name="gender">Gender</string>
    <string name="what_s_your_gender">What\'s your gender?</string>
    <string name="gender_description">You can change who sees your gender on your profile later.</string>
    <string name="female">Female</string>
    <string name="female_tv">Female</string>
    <string name="male_tv">Male</string>
    <string name="custom_tv">Custom</string>
    <string name="custom_description">Select Custom to choose another gender, or if you\'d rather not say.</string>
    <string name="mobile_num_desc">Enter the mobile number where you can be reached.You can hide this from your profile later</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="signup_tv">Sign up with email address</string>
    <string name="choose_a_password_tv">Choose a password</string>
    <string name="password_desc">Create a password with at least 6 characters.It should be something others couldn\'t guess.</string>
    <string name="email_address_tv">Email address</string>
    <string name="add_your_email">Add your email</string>
    <string name="email_desc">Adding an email helps you keep your account secure, find friends and more.</string>
    <string name="user1_gmail_com_tv">user1@gmail.com</string>
    <string name="use2_gmail_com_tv">use2@gmail.com</string>
    <string name="user3_gmail_com_tv">user3@gmail.com</string>
    <string name="skip_btn">Skip</string>
    <string name="terms_amp_privacy_title"><![CDATA[Terms & Privacy]]></string>
    <string name="finish_signing_up_heading_tv">Finish signing up</string>
    <string name="finishing_descrition_tv">People who use our service may have uploaded your contact information to Facebook.</string>
    <string name="learn_more_tv">I agree the terms and conditions</string>
    <string name="sign_up_tv">Sign up</string>
    <string name="signup_contacts_skip_btn_tv">Sign up without uploading my contacts</string>
    <string name="years_tv">years</string>
    <string name="home_page_tv">Home Page</string>
    <string name="username_tv">Jaya Supriya</string>
    <string name="ph_num_tv">9876543210</string>
    <string name="gender_tv">Female</string>
    <string name="sampler_gmail_tv">sampleuser@gmail.com</string>
    <string name="dob_tv">20–03–2000</string>
    <string name="add_to_story_tv">Add to story</string>
    <string name="edit_profile_tv">Edit Profile</string>
    <string name="settings_tv">…</string>
    <string name="contact_info_tv">Contact info</string>
    <string name="mobile_tv">Mobile</string>
    <string name="mail_tv">Mail</string>
    <string name="basic_info_tv">Basic info</string>
    <string name="birthday_tv">Birthday</string>
    <string name="home_tv">Home</string>
    <string name="friends_tv">Friends</string>
    <string name="profile_tv">Profile</string>
    <string name="create_post_tv">Create Post</string>
    <string name="log_out">LOG OUT</string>
    <string name="messenger">MESSENGER</string>
    <string name="search">SEARCH</string>
    <string name="people_may_know">People you may know</string>
    <string name="write_something_here">Write something here…</string>
    <string name="add_friend">AddFriend</string>
    <string name="remove">Remove</string>
    <string name="post">Post</string>
    <string name="see_all">See all</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_up_desc_tv">It\'s quick and easy</string>
    <string name="new_password_tv">New Password</string>
    <string name="phone_number_tv">Phone Number</string>
    <string name="email_tv">Email</string>
    <string name="terms_tv">I agree to the terms and conditions</string>
    <string name="change_password_tv">Change Password</string>
    <string name="enter_new_password_tv">Enter new password</string>
    <string name="re_enter_password_tv">Re-enter password</string>
    <string name="reset_password_tv">Reset Password</string>
    <string name="all_tv">All</string>
    <string name="recent_tv">Recent</string>
    <string name="search_friends_tv">Search Friends</string>
    <string name="total_friends_tv">110 Friends</string>
    <string name="mutual_friends_tv">6 mutual friends</string>
    <string name="remove_frd">Remove</string>
    <string name="add">Remove</string>
    <string name="confirm_password_tv">Confirm Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="no_data_available">No Friends Data Available</string>
    <string name="post_tv">POST</string>
    <string name="shares_tv">12 shares</string>
    <string name="comments_tv">37 comments</string>
    <string name="education_tv">Studying at narayana</string>

    <string name="logout_tv">Logout</string>
    <string name="cancel_tv">Cancel</string>
    <string name="warning_tv">Warning</string>
    <string name="confirmation_tv">Are you sure ?</string>
    <string name="time_tv">09:30</string>
    <string name="post_desc_tv">Description...</string>
    <plurals name="likes_count">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>
</resources>