<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="createAccViewModel"
            type="com.example.facebook.viewmodels.RegisterAccountViewModel" />
    </data>

    <ScrollView style="@style/match_wrap">

        <androidx.constraintlayout.widget.ConstraintLayout style="@style/match_wrap">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sign_up_tv"
                style="@style/wrap_wrap"
                android:layout_marginTop="20dp"
                android:text="@string/sign_up_tv"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sign_up_desc_tv"
                style="@style/wrap_wrap"
                android:text="@string/sign_up_desc_tv"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_up_tv" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/dividerLine_start"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                app:dividerColor="#777575"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_up_desc_tv" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_tv"
                style="@style/text_input_layout"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/user_name_tv"
                app:endIconMode="custom"
                app:endIconTint="?attr/colorPrimary"
                app:errorEnabled="true"
                app:errorMessage="@{createAccViewModel.userNameError}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerLine_start">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_name_edt"
                    style="@style/match_match"
                    android:inputType="text"
                    android:text="@={createAccViewModel.userName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordTv"
                style="@style/text_input_layout"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/confirm_password_tv"
                app:endIconMode="custom"
                app:endIconTint="?attr/colorPrimary"
                app:errorEnabled="true"
                app:errorMessage="@{createAccViewModel.userConfirmPasswordError}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/new_pswd_tv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPasswordEdt"
                    style="@style/match_match"
                    android:inputType="text"
                    android:text="@={createAccViewModel.userConfirmPassword}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_tv"
                style="@style/text_input_layout"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/email_tv"
                app:endIconMode="custom"
                app:endIconTint="?attr/colorPrimary"
                app:errorEnabled="true"
                app:errorMessage="@{createAccViewModel.userEmailError}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username_tv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edt"
                    style="@style/match_match"
                    android:inputType="textEmailAddress"
                    android:text="@={createAccViewModel.userEmail}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_pswd_tv"
                style="@style/text_input_layout"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/new_password_tv"
                app:endIconMode="custom"
                app:endIconTint="?attr/colorPrimary"
                app:errorEnabled="true"
                app:errorMessage="@{createAccViewModel.userPasswordError}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_tv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_pswd_edt"
                    style="@style/match_match"
                    android:inputType="text"
                    android:text="@={createAccViewModel.userPassword}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dobTextView"
                style="@style/text_input_layout"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/birthday_title"
                app:endIconDrawable="@drawable/ic_baseline_birthday"
                app:endIconMode="custom"
                app:endIconTint="?attr/colorPrimary"
                app:errorEnabled="true"
                app:errorMessage="@{createAccViewModel.userDobError}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirmPasswordTv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dobEditText"
                    style="@style/match_match"
                    android:text="@={createAccViewModel.userDob}" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/gender_tv"
                style="@style/wrap_wrap"
                android:layout_marginStart="20dp"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dobTextView" />

            <RadioGroup
                android:id="@+id/radiobtns"
                style="@style/wrap_wrap"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gender_tv">

                <RadioButton
                    android:id="@+id/maleRadioBtn"
                    style="@style/wrap_wrap"
                    android:checked="@={createAccViewModel.maleGender}"
                    android:text="@string/male_tv" />

                <RadioButton
                    android:id="@+id/femaleRadioBtn"
                    style="@style/wrap_wrap"
                    android:checked="@={createAccViewModel.femaleGender}"
                    android:text="@string/female_tv" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/check_box_btn"
                style="@style/wrap_wrap"
                android:layout_marginStart="10dp"
                android:checked="@={createAccViewModel.termsSelectionFlow}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radiobtns" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/terms_tv"
                style="@style/wrap_wrap"
                android:layout_marginTop="12dp"
                android:text="@string/terms_tv"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/check_box_btn"
                app:layout_constraintTop_toBottomOf="@id/radiobtns" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signBtn"
                style="@style/match_wrap"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:background="#E62B77E8"
                android:text="@string/sign_up_tv"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/terms_tv" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginBtn"
                style="@style/match_wrap"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:background="#E62B77E8"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signBtn" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>