<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="termsVM"
            type="com.example.facebook.viewmodels.CreateAccPTermsViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backArrowIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_baseline_arrow_back"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/backArrowIcon"
            android:text="@string/terms_amp_privacy_title"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="10dp"/>
        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/dividerLine"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:dividerColor="#777575"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/backArrowIcon" />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/volumeUpIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dividerLine"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_baseline_volume_up"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/finishing_head_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/volumeUpIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/finish_signing_up_heading_tv"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signingup_desc_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/finishing_head_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/finishing_descrition_tv"
            android:layout_marginHorizontal="15dp"
            android:textSize="13sp"
            android:layout_marginTop="15dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/learnmore_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signingup_desc_tv"
            android:text="@string/learn_more_tv"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/learnmore_tv"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="20dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:onClick="@{()->termsVM.signUpBtn()}"
            android:background="#E62B77E8"
            android:text="@string/sign_up_tv"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/signup_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="50dp"
            android:text="@string/signup_contacts_skip_btn_tv"
            android:onClick="@{()->termsVM.skipContactsAccessBtn()}"
            android:textColor="#E62B77E8"
            android:textAllCaps="false"
            android:textSize="12sp"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>