<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backArrowIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_baseline_arrow_back"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/backArrowIcon"
        android:text="@string/name"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="10dp"/>
    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/dividerLine"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        app:dividerColor="#777575"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/backArrowIcon" />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/volumeUpIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerLine"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_baseline_volume_up"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name_heading_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/volumeUpIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/name_heading"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name_description_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_heading_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/name_description"
        android:layout_marginTop="15dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_description_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="40dp"
        app:endIconMode="clear_text"
        android:hint="@string/user_name_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/usernameTv"
        android:layout_marginTop="100dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="#E62B77E8"
        android:layout_marginHorizontal="10dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>