<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="userGenderVM"
            type="com.example.facebook.viewmodels.CreateAccGenderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backArrowIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_baseline_arrow_back"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/backArrowIcon"
            android:text="@string/gender"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="10dp"/>
        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/dividerLine"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:dividerColor="#777575"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/backArrowIcon" />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/volumeUpIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dividerLine"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_baseline_volume_up"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/gender_heading_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/volumeUpIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/what_s_your_gender"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/gender_description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/gender_heading_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/gender_description"
            android:layout_marginTop="15dp"
            />
        <RadioGroup
            android:id="@+id/gender_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/gender_description_tv"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp">
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/female_radiobtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@color/white"
                android:button="@null"
                android:drawablePadding="30dp"
                android:drawableEnd="@drawable/ic_baseline_radio_button_unchecked"
                android:text="@string/female_tv"
                android:textSize="18sp"/>
            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/dividerLines"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:dividerColor="#777575"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/female_radiobtn" />
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/male_radio_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@color/white"
                android:button="@null"
                android:drawablePadding="30dp"
                android:drawableEnd="@drawable/ic_baseline_radio_button_unchecked"
                android:text="@string/male_tv"
                android:textSize="18sp"/>
            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/dividerLineMale"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:dividerColor="#777575"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/male_radio_tv" />
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/custom_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@color/white"
                android:button="@null"
                android:drawablePadding="30dp"
                android:drawableEnd="@drawable/ic_baseline_radio_button_unchecked"
                android:text="@string/custom_tv"
                android:textSize="18sp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/custom_description"/>
            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/dividerLineCustom"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:dividerColor="#777575"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/custom_tv" />
        </RadioGroup>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/gender_radio_btn"
            android:layout_marginTop="100dp"
            android:text="@string/next"
            android:onClick="@{()->userGenderVM.createGenderBtn()}"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="#E62B77E8"
            android:layout_marginHorizontal="20dp"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>